# opcua-pumps-template

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  client.py  main.c
src/: example.c  example.h
